--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ video::-webkit-media-controls-panel {
 .day-link {
 	width: 40%;
 	margin: 10px 10px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 }
 
 .day-link img {
