--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ a {
 /* main */
 
 main {
-	margin: 130px 0 75px 0;
+	margin: 140px 0 75px 0;
 	height: 100vh;
 	z-index: -1;
 	width: 100%;
@@ -49,6 +49,7 @@ video::-webkit-media-controls-panel {
 /* links */
 
 .links-wrap {
+	margin: 30px 0;
 	padding-bottom: 100px;
 	display: flex;
 	width: 100%;
@@ -57,8 +58,8 @@ video::-webkit-media-controls-panel {
 }
 
 .day-link {
-	width: 40%;
-	margin: 10px 10px;
+	width: 36%;
+	margin: 20px 20px;
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 }
 
@@ -106,7 +107,7 @@ footer {
 
 .footer-box {
 	color: white;
-	font-size: 12px;
+	font-size: 10px;
 	font-weight: 500;
 	display: flex;
 	flex-direction: column;
