--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,11 @@ video::-webkit-media-controls-panel {
 	width: 100%;
 }
 
+.day-link:hover {
+	transform: scale(1.1);
+	transition: 0.2s ease-in-out;
+}
+
 /* whatsapp */
 
 .whatsapp-icon {
