--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,35 @@ a {
 main {
 	height: 100vh;
 	z-index: -1;
-	width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+	body {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	#root > * {
+		max-width: 485px;
+	}
+
+	.whatsapp-icon {
+		position: fixed;
+		bottom: 10% !important;
+		right: 40% !important;
+	}
 }
 
 .landing-wrap {
-	margin: 140px 0 75px 0;
+	margin: 0 0 75px 0;
+	padding: 150px 0 0 0;
 }
 
 .day-wrap {
-	margin: 140px 0 0 0;
+	margin: 0 0 0 0;
+	padding: 150px 0 0 0;
 }
 
 .video-wrap,
@@ -97,28 +117,27 @@ video::-webkit-media-controls-panel {
 
 /* header */
 
+header {
+	position: fixed;
+	z-index: 1;
+}
+
 .logodata {
 	width: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
 }
 
 /* footer */
 
 footer {
 	position: fixed;
+	z-index: 1;
 	bottom: 0;
-	left: 0;
 	width: 100%;
-	height: 65px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: #ef5f39;
 }
 
 .footer-box {
+	height: 65px;
+
 	color: white;
 	font-size: 10px;
 	font-weight: 500;
@@ -126,6 +145,11 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #ef5f39;
 }
 
 .footer-box a {
@@ -147,4 +171,26 @@ footer {
 
 .contest-btn img {
 	max-width: 310px;
+}
+
+/* texts */
+
+.day-title {
+	font-size: 26px;
+	font-weight: 800;
+	color: #ef5f39;
+}
+
+.day-txt-bold {
+	font-size: 26px;
+	font-weight: 800;
+}
+
+.day-txt-reg {
+	font-size: 16px;
+	font-weight: 700;
+}
+
+.day-txt-bolder {
+	font-weight: 800;
 }
