--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ main {
 
 .day-wrap {
 	margin: 0 0 0 0;
-	padding: 150px 0 0 0;
+	padding: 150px 0 80px 0;
 }
 
 .video-wrap,
@@ -72,6 +72,7 @@ video::-webkit-media-controls-panel {
 	text-align: center;
 	line-height: 1.6;
 	font-size: 15px;
+	margin-bottom: 150px;
 }
 
 /* links */
@@ -193,4 +194,9 @@ footer {
 
 .day-txt-bolder {
 	font-weight: 800;
+}
+
+.contest-txt {
+	font-size: 14px;
+	font-weight: 600;
 }
